-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.8, 6.2.2
-
ca64365e3 (dev), d37ef3167 (6.5)
The special character "Object Replacement Character" with UTF-16 code 0xFFFC does not show up visibly when in a QLabel or other text displaying element.
When copy pasting the character directly into QCreator it is pasted as a zero width character, the editor detects that it exists but it does not take up visible space in the editor.
0xFFFB and 0xFFFD will show up as some kind of character, 0xFFFC does not show up at all.
| For Gerrit Dashboard: QTBUG-101526 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 448081,6 | Don't hide object replacement char except in rich text | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 448770,2 | Don't hide object replacement char except in rich text | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |